# etc_jupyter_server_extension

./: .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
etc_jupyter_server_extension/: __init__.py  application.py  handlers.py
etc_jupyter_server_extension/tests/: __init__.py  test_handlers.py
jupyter-config/nb-config/: etc_jupyter_server_extension.json
jupyter-config/server-config/: etc_jupyter_server_extension.json
schema/: plugin.json
src/: handler.ts  index.ts
src/__tests__/: etc_jupyter_server_extension.spec.ts
ui-tests/: package.json
ui-tests/tests/: etc_jupyter_server_extension.spec.ts
